force-app/main/default/objects/APXT_CongaSign__Document__c/fields/APXT_CongaSign__ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__ContentDocumentId__c</fullName>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>