force-app/main/default/objects/APXT_CongaSign__Document__c/fields/APXT_CongaSign__Transaction__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__Transaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conga Sign Transaction</label>
    <referenceTo>APXT_CongaSign__Transaction__c</referenceTo>
    <relationshipLabel>Conga Sign Documents</relationshipLabel>
    <relationshipName>Conga_Sign_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>