force-app/main/default/objects/APXT_CongaSign__Document__c/fields/APXT_CongaSign__Type__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Signer_Attachment</fullName>
                <label>Signer Attachment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>